--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="green">#ACBD6F</color>
     <color name="lilac">#CBCBE7</color>
     <color name="red">#EF3535</color>
+    <color name="purple2">#74739C</color>
+    <color name="gray">#544C4C</color>
 </resources>
