--- a/app/src/main/res/layout/club_list.xml
+++ b/app/src/main/res/layout/club_list.xml
@@ -44,7 +44,8 @@
                     android:text="Club 1"
                     android:textSize="18sp"
                     android:textStyle="bold"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:fontFamily="@font/poppins_bold"/>
 
                 <TextView
                     android:id="@+id/member_count"
@@ -52,7 +53,8 @@
                     android:layout_height="wrap_content"
                     android:text="348 members"
                     android:textSize="14sp"
-                    android:textColor="#808080"/>
+                    android:textColor="#808080"
+                    android:fontFamily="@font/poppins_semibold"/>
 
             </LinearLayout>
 
@@ -63,6 +65,7 @@
                 android:text="Join"
                 android:background="@drawable/club_join_button"
                 android:textColor="@android:color/white"
+                android:fontFamily="@font/poppins_semibold"
                 android:padding="8dp" />
 
         </LinearLayout>
@@ -80,7 +83,8 @@
                 android:layout_weight="1"
                 android:text="Club description goes here..."
                 android:textSize="15sp"
-                android:textColor="#606060"/>
+                android:textColor="#606060"
+                android:fontFamily="@font/poppins_regular"/>
 
             <Button
                 android:id="@+id/view_button"
@@ -89,6 +93,7 @@
                 android:text="View"
                 android:background="@drawable/club_view_button"
                 android:textColor="@android:color/white"
+                android:fontFamily="@font/poppins_semibold"
                 android:padding="8dp"/>
 
         </LinearLayout>
