--- a/app/src/main/res/layout/club_list.xml
+++ b/app/src/main/res/layout/club_list.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="12dp">
+        android:layout_margin="3dp">
 
         <!-- Horizontal layout for image, club name/member count, and join button -->
         <LinearLayout
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="2dp">
 
             <TextView
                 android:id="@+id/club_description"
