--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -72,11 +72,12 @@
                 android:id="@+id/username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Purple"
+                android:text="Purple Cat"
                 android:textSize="24sp"
-                android:textStyle="bold"
                 android:layout_marginTop="8dp"
-                android:textColor="@android:color/black"/>
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/purple"
+                android:minHeight="0dp"/>
 
             <!-- Handle -->
             <TextView
@@ -98,6 +99,21 @@
                 android:textColor="@color/gray"
                 android:fontFamily="@font/poppins_medium"
                 />
+
+            <Button
+                android:id="@+id/editProfBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Edit Profile"
+                android:background="@drawable/mod_dashb_btn_bg"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppins_semibold"
+                android:paddingStart="25dp"
+                android:paddingEnd="25dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:minHeight="35dp"
+                android:onClick="viewEditProfile"/>
 
             <!-- Follower/Following/Post Stats -->
             <LinearLayout
