--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#EF3535</color>
     <color name="purple2">#74739C</color>
     <color name="gray">#544C4C</color>
+    <color name="lightgray">#F7F7F7</color>
 </resources>
