--- a/app/src/main/res/layout/fragment_alerts.xml
+++ b/app/src/main/res/layout/fragment_alerts.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@color/white">
 
     <!-- Header with Notification Title and Bell Icon -->
     <LinearLayout
@@ -18,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="Your Notifications"
             android:fontFamily="@font/poppins_semibold"
-            android:textSize="24sp"
+            android:textSize="26sp"
             android:textStyle="bold"
             android:layout_weight="1"
             android:textColor="@color/black"/>
@@ -44,5 +45,5 @@
         android:id="@+id/rv_notifications"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 </LinearLayout>
