--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,6 +14,14 @@
         android:layout_height="wrap_content"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+        <ImageButton
+            android:id="@+id/logoutBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_logout"
+            android:background="@color/purple"
+            android:onClick="logoutFunc" />
+
         <Button
             android:id="@+id/modButton"
             android:layout_width="wrap_content"
@@ -39,7 +47,7 @@
             android:layout_marginTop="10dp"
             android:src="@drawable/pickpal_logo"
             android:gravity="end"
-            android:layout_marginStart="350dp"
+            android:layout_marginStart="320dp"
             android:contentDescription="@string/back_button" />
 
     </androidx.appcompat.widget.Toolbar>
