adjust the layout of signup panel 1 and create panel 2

--- a/app/src/main/res/layout/activity_signup1.xml
+++ b/app/src/main/res/layout/activity_signup1.xml
@@ -121,6 +121,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/container_input_box">
 
             <ImageView
@@ -166,6 +167,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/container_input_box">
 
             <ImageView
@@ -211,6 +213,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/container_input_box">
 
             <ImageView
@@ -256,6 +259,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/container_input_box">
 
             <ImageView
@@ -291,7 +295,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="613dp"
+        android:layout_marginTop="650dp"
         android:layout_gravity="top|left"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
@@ -307,7 +311,7 @@
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginLeft="135dp"
-        android:layout_marginTop="612dp"
+        android:layout_marginTop="650dp"
         android:layout_gravity="top|left"
         android:gravity="left|center_vertical"
         android:includeFontPadding="false"
@@ -323,7 +327,7 @@
         android:layout_width="120dp"
         android:layout_height="43dp"
         android:layout_marginRight="57dp"
-        android:layout_marginTop="670dp"
+        android:layout_marginTop="680dp"
         android:layout_gravity="right"
         android:background="@drawable/img_rectangle"
         android:fontFamily="@font/poppins_bold"
