--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple2">#74739C</color>
     <color name="gray">#544C4C</color>
     <color name="lightgray">#F7F7F7</color>
+    <color name="grey">#F5F5F5</color>
 </resources>
